add panorama creating chapter

--- a/6_mask/3_bk_algorithm_applying.tex
+++ b/6_mask/3_bk_algorithm_applying.tex
@@ -19,16 +19,16 @@
 	\centering
 	\begin{subfigure}[b]{0.55\textwidth}
 		\centering
-		\includegraphics[width=\textwidth]{images/prev_yakovlev}
-		\caption{Попередній кадр
+		\includegraphics[width=\textwidth]{images/prev_frame}
+		\caption{Попередній кадр $F^i$
 			\label{fig:yakovlev:bk_examples:a}
 		}
 	\end{subfigure}
 	
 	\begin{subfigure}[b]{0.55\textwidth}
 		\centering
-		\includegraphics[width=\textwidth]{images/next_yakovlev}
-		\caption{Поточний кадр
+		\includegraphics[width=\textwidth]{images/next_frame}
+		\caption{Поточний кадр $F^{i+s}$
 			\label{fig:yakovlev:bk_examples:b}
 		}
 	\end{subfigure}
@@ -39,20 +39,20 @@
 	\begin{subfigure}[b]{0.55\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{images/inv_diff}
-		\caption{Інвертована різниця попереднього і поточного кадрів
+		\caption{Інвертована різниця $F^i$ і $F^{i+s}$
 			\label{fig:yakovlev:bk_examples:c}
 		}
 	\end{subfigure}
 	
 	\begin{subfigure}[b]{0.55\textwidth}
 		\centering
-		\includegraphics[width=\textwidth]{images/mask_yakovlev}
-		\caption{Маска рухомих об'єктів
+		\includegraphics[width=\textwidth]{images/next_with_mask}
+		\caption{Маска рухомих об'єктів на кадрі $F^{i+s}$
 			\label{fig:yakovlev:bk_examples:d}
 		}
 	\end{subfigure}
 	
-	\caption{Процес створення маски з відео
+	\caption{Процес створення маски рухомих об'єктів з відео \cite{yakovlev_video}
 		\label{fig:yakovlev:bk_examples}
 	}
 \end{figure}
