--- a/6_mask/4_cnn.tex
+++ b/6_mask/4_cnn.tex
@@ -25,7 +25,7 @@
     \centering
     \includegraphics[width=0.3\textwidth]{images/cnn_conv_operation}
     \caption{Ілюстрація взяття звичайної згортки  \cite{deep_wise_sep_conv_website}
-        \label{fig:cnn:deep_wise_conv}
+        \label{fig:cnn:conv_operation}
     }
 \end{figure}
 
@@ -451,7 +451,7 @@ R-CNN не була досить потужною, оскільки викори
 Ці два етапи поєднуються в одну мережу за допомогою поширення ознак (feature sharing).
 
 
-\textbf{RPN} \ref{} приймає на вхід картинку, і повертає множину координат прямокутних областей як подальших
+\textbf{RPN}  приймає на вхід картинку, і повертає множину координат прямокутних областей як подальших
 кандидатів для класифікації з їхніми мірами присутності об'єкту. RPN - повнозв'язна 
 згорткова мережа, що значить в ній немає лінійних шарів. Саме вона стала заміною
 вибіркового алгоритму у Fast R-CNN. 
