--- a/6_mask/5_conclusion.tex
+++ b/6_mask/5_conclusion.tex
@@ -1,7 +1,7 @@
 \chapterConclusion
 
-Було оглянуто метод алгоритм Бойкова-Колмогорова для
-отримання маски рухомих об'єктів. Також розглянуто
+Було розглянуто алгоритм Бойкова-Колмогорова для
+отримання маски рухомих об'єктів. Також описано
 згорткові мережі YOLO, MobileNet, SSD, R-CNN
 як спосіб детектування та локалізувати людину. 
 Описано архітектури, переваги та недоліки кожної 
