--- a/7_panorama/2_frames_matching.tex
+++ b/7_panorama/2_frames_matching.tex
@@ -16,21 +16,21 @@
 камера виглядає статичною, а сегменти дошки поступово стають видимими та
 поєднуються для утворення панорами.
 
-Ми можемо використовувати дескриптори ознак, такі як SIFT, SURF [13] або ORB
-    [14], щоб знайти ключові точки (feature points). Був обраний SIFT, оскільки під час
+Ми можемо використовувати дескриптори ознак, такі як SIFT, SURF або ORB, 
+щоб знайти ключові точки (feature points / keypoints). Був обраний SIFT, оскільки під час
 експериментів він надав візуально кращі результати, ніж інші алгоритми.
 
 
 \subsection{SIFT}
 
 У 1999 році англієць Девід Лоу представив алгоритм SIFT (Scale-invariant feature transform)
-% \cite{Lowe_david_2004}
+\cite{sift}
 ,укр. \textit{Масштабозалежне перетворення ознак}. Даний алгоритм
-застовуэться для знаходження ключових точок (локальних ознак) зображення. Метод досить точно
+застовується для знаходження ключових точок (локальних ознак) зображення. Метод досить точно
 і швидко знаходить дані точки.
 Головною перевагою алгоритму є інваріантність щодо просторової орієнтації та якості освітлення.
 Має широке застосування в області комп'ютерного зору як один з кроків для побудови 3D-карт,
-ректифікації стереопар та детектингу об'єктів.
+ректифікації стереопари та детектингу об'єктів.
 
 Коротко розпишемо структуру алгоритму.
 
@@ -38,7 +38,7 @@
     \item \textbf{Пошук масштабно-просторових екстремумів}
           На даному етапі потрібно знайти зони зображення та такі масштаби, які можна повторно
           знайти при різних перспективах(точок погляду). Тут використовується просторово та
-          масштабно інваріантне ядро оператора Гауса з операцією конволюції
+          масштабно інваріантне ядро оператора Гауса з операцією згортки
           до зображення $L(x,y,\sigma) = G(x,y,\sigma) \ast I(x,y)$,
           де $G(x,y,\sigma) = (1/2\pi\sigma^2)\exp({-(x^2+y^2)/2\sigma^2})$.
 
@@ -50,7 +50,7 @@
               %  \cite{}
           \end{equation}
 
-          Тобто початкове зображення поступово піддається конволюціям гаусианів з константою
+          Тобто початкове зображення поступово піддається згорткам гаусіанів з константою
           $k$ на кожну епоху. При чому кожна епоха відрізняється між собою значенням $k = 2^{1/s}$,
           де $s$ число, що показує на скільки інтервалів розділити кожну епоху.
           В стеку однієї епохи зберігається $s+3$ зображень. Коли епоха завершиться, то
@@ -60,12 +60,12 @@
           \begin{figure}[H]
               \centering
               \includegraphics[width=0.6\textwidth]{images/sift1}
-              \caption{Знаходження різниць гаусианів 1-го етапу SIFT}
+              \caption{Знаходження різниць гаусіанів 1-го етапу SIFT}
               \label{fig:swift1}
           \end{figure}
 
           \subitem \textbf{Пошук локальних екстремумів} \\
-          Для знаходження локальних екстремумів зображення різниці гауссіан
+          Для знаходження локальних екстремумів зображення різниці гаусіан
           якоїсь точки беруться 8 сусідів цього ж зображення і 9 зображення різниць
           зверху та знизу. Точка є екстремум якщо вона значення її більше або менше за
           значення всіх її сусідів.
@@ -73,7 +73,7 @@
           \begin{figure}[H]
               \centering
               \includegraphics[width=0.3\textwidth]{images/sift2}
-              \caption{Знаходження різниць гаусианів 1-го етапу SIFT}
+              \caption{Знаходження різниць гаусіанів 1-го етапу SIFT}
               \label{fig:swift2}
           \end{figure}
 
@@ -91,12 +91,12 @@
 
           \subitem \textbf{Частота вибірки по простору} \\
           Пропонується використовувати оптимальне значення $\sigma = 1.6$ при якому
-          маємо найбільший відсоток співпадіння екстремумів при багатократному повторенні
+          маємо найбільший відсоток співпадіння екстремумів при багаторазовому повторенні
           експерименту.
 
     \item \textbf{Точна локалізація ключових точок}
           Після знаходження точок-кандидатів потрібно відсіяти точки зі слабким контрастом на основі
-          інформації масштабів та відношення головних викривлень. Для цього застосовується рокзклад
+          інформації масштабів та відношення головних викривлень. Для цього застосовується розклад
           Тейлора масштабно-просторової функції $D(x,y,\sigma)$ в точці $\textbf{x} = (x,y,\sigma)$.
           \begin{equation}
               D(\textbf{x}) = D + \frac{\partial D^T }{\partial \textbf{x} }\textbf{x} +
@@ -109,7 +109,7 @@
                   \textbf{x}^2}\frac{\partial D }{\partial \textbf{x}}
               \label{eq:extremum}
           \end{equation}
-          Підставивши \ref{eq:extremum} у  \ref{eq:tailor_1} маємо можлвість відсіяти нестабільні
+          Підставивши \ref{eq:extremum} у  \ref{eq:tailor_1} маємо можливість відсіяти нестабільні
           екстремуми по модулю значення (рис. \ref{fig:sift45}):
           \begin{equation}
               D(\widehat{\textbf{x}}) = D + \frac{1}{2}\frac{\partial D^{T} }{\partial \textbf{x}}\widehat{\textbf{x}}
@@ -136,10 +136,10 @@
                   \label{fig:sift45}
               }
           \end{figure}
-          Тобто обмежуючи $|D(\widehat{\textbf{x}})| < \alpha$. Якщо кожен піксел в діапазоні $[0,1]$, то і
+          Тобто обмежуючи $|D(\widehat{\textbf{x}})| < \alpha$. Якщо кожен піксель в діапазоні $[0,1]$, то і
           $ \alpha \in [0,1]$.
     \item \textbf{Визначення орієнтації градієнтів} \\
-          До кожної точки визначаэться декілька орієнтацій градієнтів.
+          До кожної точки визначається декілька орієнтацій градієнтів.
           Магнітуда градієнта по сусідам $m(x,y)$ та його орієнтація $\theta(x,y)$:
           \begin{equation}
               m(x,y) = \sqrt{(L(x+1,y) - (L(x-1,y))^2 + (L(x,y+1) - L(x,y-1))^2}
@@ -197,142 +197,14 @@
 Тобто для кожного дескриптора першого зображення шукаємо найближчий на другому.
 Маючи список відповідних дескрипторів можна знайти відповідні точки на обох зображеннях.
 
-\subsection{Знаходження гомографії за допомогою RANSAC методу}
+Приклад застосування SIFT разом з Brute Force Matcher (Рис. \ref{fig:matches_img}) на 
+дошці з викладачем наведений нижче.
 
-Гомографія - матриця, що описує зв'язок точок між двома зображеннями плоскої поверхні
-називається.
-
-\begin{equation}
-    H =
-    \begin{bmatrix}
-        h_{11} & h_{12} & h_{13} \\
-        h_{21} & h_{22} & h_{13} \\
-        h_{31} & h_{32} & h_{33}
-    \end{bmatrix}
-    \label{eq:h_matrix}
-\end{equation}
-
-\begin{equation}
-    H^{i} \cdot p_{j}^{i + s} = c \cdot p_{j}^{i},\quad\forall i = \overline{1,4\ }
-    \label{eq:h_connection}
-\end{equation}
-
-
-Рівняння \ref{eq:h_connection} можна легко розв'язати відносно невідомої гомографії
-\(H^{i}\). Цю матрицю можна використовувати для компенсації руху камери
--- ми застосовуємо її до координат пікселів кадру номер \(i + s\), після
-чого точки зображення, отриманого в результаті перетворення, мають ті ж
-координати, що й відповідні їм точки на кадрі під номером \(i\). Якщо
-отримані координати не цілочисельні, їх можна округлити, що не матиме
-значного негативного впливу на якість результату.
-
-Знаходження $H$ вимагає знаходження всіх 9 параметрів матриці \ref{eq:h_matrix}.
-Візьмемо пару відповідних точок $T$ та $T'$:
-
-
-$T = ((x_1,y_1,1), (x_2,y_2,1), (x_3,y_3,1), (x_4,y_4,1))$,
-
-
-$T' = ((x'_1,y'_1,1), (x'_2,y'_2,1), (x'_3,y'_3,1), (x'_4,y'_4,1))$
-
-Перепишемо \ref{eq:h_connection} у матричній формі для $T$ та $T'$:
-
-\begin{equation}
-    \begin{bmatrix}
-        x'_i\lambda \\
-        y'_i\lambda \\
-        \lambda
-    \end{bmatrix}
-    =
-    \begin{bmatrix}
-        h_{11} & h_{12} & h_{13} \\
-        h_{21} & h_{22} & h_{13} \\
-        h_{31} & h_{32} & h_{33}
-    \end{bmatrix}
-    \begin{bmatrix}
-        x_i \\
-        y_i \\
-        1
-    \end{bmatrix}
-    ,\quad\forall i,j = \overline{1,4\ }
-    \label{eq:h_connection2}
-\end{equation}
-
-Такми чином ми приходимо до розв'язку системи:
-\begin{equation}
-    \underbrace{
-        \begin{bmatrix}
-            x_1 & y_1 & 1 & 0   & 0   & 0 & -x_1x'_1 -y_1x'_1 \\
-            x_2 & y_2 & 1 & 0   & 0   & 0 & -x_2x'_2 -y_2x'_2 \\
-            x_3 & y_3 & 1 & 0   & 0   & 0 & -x_3x'_3 -y_3x'_3 \\
-            x_4 & y_4 & 1 & 0   & 0   & 0 & -x_4x'_4 -y_4x'_4 \\
-            0   & 0   & 0 & x_1 & y_1 & 1 & -x_1y'_1 -y_1y'_1 \\
-            0   & 0   & 0 & x_2 & y_2 & 1 & -x_2y'_2 -y_2y'_2 \\
-            0   & 0   & 0 & x_3 & y_3 & 1 & -x_3y'_3 -y_3y'_3 \\
-            0   & 0   & 0 & x_4 & y_4 & 1 & -x_4y'_4 -y_4y'_4
-        \end{bmatrix}
-    }_\textrm{A}
-    \begin{bmatrix}
-        h_{11} \\
-        h_{12} \\
-        h_{13} \\
-        h_{21} \\
-        h_{22} \\
-        h_{23} \\
-        h_{31} \\
-        h_{32}
-    \end{bmatrix}
-    =
-    h_{33}
-    \begin{bmatrix}
-        x'_1 \\
-        x'_2 \\
-        x'_3 \\
-        x'_4 \\
-        y'_1 \\
-        y'_2 \\
-        y'_3 \\
-        y'_4
-    \end{bmatrix}
-\end{equation}
-
-Варто підмітити, що ми потім  позбуваємось  $h_{33}$, щоб $H$ була нормованою, оскільки вона
-зв'язує точки площин, в яких 3-тя координата 1.
-У $A$ маємо 8 рівнянь, для знаходження параметрів яких потрібно, щоб $A$ була повноранговою.
-Для отримання $H$ застосовується сингулярний розклад (SVD) матриці $А = U\Sigma V^*$.
-Після розкладу $V^*$ має розмір $9\times9$. Параметри $H$ знаходяться в останньому рядку $V^*$.
-
-\begin{equation}
-    H = V^{*}_{9,\cdot }/V^{*}_{9,9},\quad H \in R^{1 \times 9} \rightarrow H \in R^{3 \times 3}
-    \label{eq:honography_svd}
-\end{equation}
-
-
-Для оцінки гомографії використовували RANSAC \cite{Fischler1981RandomSC}.
-Користувач вводить рівень \(\varepsilon > 0\)
-дозволеної похибки розрахунків -- що менше, то краще, проте тим довше
-буде працювати алгоритм пошуку гомографії.
-
-\begin{equation}
-    E(H) = \sum_{(x,x') \in M^{i,i+s}}
-    \llbracket \|
-    \frac{H\cdot x'}{(H\cdot x')_z} - x
-    \Vert \leq \varepsilon
-    \rrbracket
-    \to \max\limits_{\substack{H \in \mathbb{R}^{3 \times 3} \\ \det{H} \neq 0}}
-    \label{eq:homography_estimation}
-\end{equation}
-
-\begin{algorithm}[H]
-    \caption{Алгоритм знаходження гомографії за принципом RANSAC}
-    \begin{algorithmic}
-        \State \textbf{Вхід:} $M^{i,i+s}$ - множина відповідних точок, $\varepsilon$ та $n$ - кількість ітерацій
-        \State \textbf{Вихід:} $H^{best}$ - найкраща матриця гомографії
-        \State $\forall i = \overline{1,n}:$
-        \State \quad 1. Вибираємо випадковим чином 4 пари відповідних точок $T$ та $T'$ з $M^{i,i+s}$.
-        \State \quad 2. Обчислюємо $H$ по формулі \ref{eq:honography_svd}
-        \State \quad 3. Обчислюємо $E(H)$ по формулі \ref{eq:homography_estimation}
-        \State \quad 4. Якщо  $E(H) < E(H^{best})$:
-        \State \quad \quad $H^{best} \gets H$
-    \end{algorithmic}
-\end{algorithm}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{images/matches_img}
+    \caption{Кадри $F^i$ та $F^{i+s}$ з ключовими точками та лініями, 
+    які поєднують відповідні точки з відео \cite{yakovlev_video}
+    \label{fig:matches_img}
+    }
+\end{figure}
