--- a/7_panorama/main.tex
+++ b/7_panorama/main.tex
@@ -1,3 +1,6 @@
 \chapter{Створення панорами}
 \import{}{1_preface}
 \import{}{2_frames_matching}
+\import{}{3_homography_estimation}
+\import{}{4_panorama_creating}
+\import{}{5_conclusion}
