add stats chapter

--- a/5_problem/2_problem.tex
+++ b/5_problem/2_problem.tex
@@ -7,38 +7,37 @@
 Для одержання бажаних результатів було запропоновано
 вирішити такі проблеми:
 \begin{enumerate}
-	\item Стабілізація кадрів;
+	\item
+	      \textbf{Стабілізація кадрів} \\
 	      Багато відео лекцій записуються не в найкращих умовах.
 	      Камера може випадково затруситися, якщо її прикріпити до столу
 	      де студенти пишуть лекцію f,j або закріплена не стабільно, таким чином
 	      це заважає нормально слухати лекцію і фокусуватись на написах дошки.
-	      
-	      *****Вставити  два кадри і різницю, щоб показати не стабілізоване відео
-	      
-	\item Прибирання викладача;
+
+	\item
+	      \textbf{Прибирання викладача} \\
 	      Також однією з головних задач є видалення викладача з відео, оскільки
 	      було поставлено за мету надавати користувачу чисті написи з дошки.
 	      Є чимало методів як вирішувати цю задачу. Можна локалізувати тільки
 	      людину, а можна і всі об'єкти, що рухаються в площині дошки. Маючи
 	      дані про положення в кадрі викладача ми матимемо змогу оновлювати
 	      з часом інформацію з дошки яка була тимчасово перекрита.
-	      
-	      *****Вставити кадр з маскою людини
-	      
-	\item Створення панорамних слайдів;
+
+	\item
+	      \textbf{Створення панорамних слайдів} \\
 	      Часто, коли дошки сильно об'ємні по площі камера знімає тільки ту частину де
 	      викладач щось пише. Під час лекції камеру переміщають так, щоб лектор був завжди
 	      в полі зору. Таким чином, якщо студент не встиг переписати все з однієї частини
 	      дошки, а камеру перемістили, то учень втрачає частину інформації. Було б добре
 	      мати слайди, які по мірі руху камери містили всю дошку.
-	      
-	      *****Вставити панорамну склейку кадрів
-	      
-	\item Оцифровування написів;
+
+
+	\item
+	      \textbf{Оцифровування написів} \\
 	      Умови освітлення, розводи на дошці, неякісна зйомка, шуми - все це сильно впливає
 	      на сприйняття лекційного матеріалу. Непогано було б мати бінаризовані слайди без
 	      шумів тільки з написами як в записнику.
-	      
+
 \end{enumerate}
 
 
