--- a/7_panorama/4_panorama_creating.tex
+++ b/7_panorama/4_panorama_creating.tex
@@ -109,6 +109,7 @@
             \end{gathered}
         \end{equation}
     \end{algorithmic}
+    \label{al:panorama_creating_algorithm}
 \end{algorithm}
 
 
