--- a/index.tex
+++ b/index.tex
@@ -27,6 +27,9 @@
 % for indicator symbol
 \usepackage{bbold}
 
+% % for tables
+% \usepackage[table,xcdraw]{xcolor}
+
 
 \NewTotalDocumentCounter{totalfigures}
 \NewTotalDocumentCounter{totalbibitems}
